feedback spacing fix

--- a/material-overrides/assets/stylesheets/kluster.css
+++ b/material-overrides/assets/stylesheets/kluster.css
@@ -675,12 +675,6 @@ html .md-footer-meta.md-typeset .papermoon a {
     padding-left: 0.8rem;
   }
 
-  /* Indent level 2 nav items */
-  .md-nav--primary .md-nav[data-md-level="2"] > .md-nav__list {
-    margin-bottom: 0.3rem;
-    padding-bottom: 0;
-  }
-
   [dir="ltr"] .md-nav--primary .md-nav__item > .md-nav__link {
     gap: 0.4rem;
     margin-right: 0;
